--- a/package.json
+++ b/package.json
@@ -533,6 +533,7 @@
     "@kubernetes/client-node": "^1.4.0",
     "js-yaml": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   }
 }
