--- a/package.json
+++ b/package.json
@@ -247,6 +247,21 @@
         "command": "kube9.showPortForwards",
         "title": "Show Port Forwards",
         "category": "kube9"
+      },
+      {
+        "command": "kube9.copyPortForwardURL",
+        "title": "Copy Local URL",
+        "category": "kube9"
+      },
+      {
+        "command": "kube9.viewPortForwardPod",
+        "title": "View Pod",
+        "category": "kube9"
+      },
+      {
+        "command": "kube9.restartPortForward",
+        "title": "Restart Forward",
+        "category": "kube9"
       }
     ],
     "menus": {
@@ -485,6 +500,21 @@
           "command": "kube9.stopPortForward",
           "when": "view == kube9ClusterView && viewItem == portForward",
           "group": "kube9@1"
+        },
+        {
+          "command": "kube9.copyPortForwardURL",
+          "when": "view == kube9ClusterView && viewItem == portForward",
+          "group": "kube9@2"
+        },
+        {
+          "command": "kube9.viewPortForwardPod",
+          "when": "view == kube9ClusterView && viewItem == portForward",
+          "group": "kube9@3"
+        },
+        {
+          "command": "kube9.restartPortForward",
+          "when": "view == kube9ClusterView && viewItem == portForward",
+          "group": "kube9@4"
         }
       ],
       "editor/context": [
