feat: register view pod logs command
Add "View Logs" context menu command for Pod resources that opens
PodLogsViewerPanel with cluster-specific panel management.

- Register kube9.viewPodLogs command in package.json
- Add context menu entry for Pod resources (kube9@2 group)
- Wire command handler in extension.ts with proper error handling
- Extract pod info from ClusterTreeItem resourceData

Fixes: Story 003-register-view-logs-command

--- a/package.json
+++ b/package.json
@@ -126,6 +126,11 @@
         "category": "Kube9"
       },
       {
+        "command": "kube9.viewPodLogs",
+        "title": "View Logs",
+        "category": "Kube9"
+      },
+      {
         "command": "kube9.applyYAML",
         "title": "Apply YAML",
         "category": "Kube9"
@@ -443,6 +448,11 @@
         },
         {
           "command": "kube9.openTerminal",
+          "when": "view == kube9ClusterView && viewItem == resource:Pod",
+          "group": "kube9@2"
+        },
+        {
+          "command": "kube9.viewPodLogs",
           "when": "view == kube9ClusterView && viewItem == resource:Pod",
           "group": "kube9@2"
         },
