feat: add React webview scaffolding for pod logs viewer
- Create React entry point and App component
- Add styles.css with VS Code theme variables
- Update build:webview script to include pod-logs
- Update webpack config to exclude pod-logs from extension build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "out",
     ".vscode-test",
     "src/webview/argocd-application",
-    "src/webview/event-viewer"
+    "src/webview/event-viewer",
+    "src/webview/pod-logs"
   ]
 }
 
