--- a/package.json
+++ b/package.json
@@ -565,7 +565,7 @@
     "build": "webpack --mode production && npm run build:webview",
     "watch": "webpack --mode development --watch",
     "compile": "tsc && npm run build:webview",
-    "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify && esbuild src/webview/event-viewer/index.tsx --bundle --outfile=media/event-viewer/index.js --format=iife --platform=browser --minify",
+    "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify && esbuild src/webview/event-viewer/index.tsx --bundle --outfile=media/event-viewer/index.js --format=iife --platform=browser --minify && esbuild src/webview/pod-logs/index.tsx --bundle --outfile=media/pod-logs/main.js --format=iife --platform=browser --minify",
     "pretest": "npm run compile && npm run lint",
     "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
     "pretest:unit": "npm run compile && npm run lint",
