feat: add Describe (Raw) command for nodes
Add kube9.describeNodeRaw command that opens raw kubectl describe
output for nodes in a read-only text editor. Command appears in
context menu when right-clicking nodes in the tree view.

- Register kube9.describeNodeRaw command in extension.ts
- Add command definition and context menu item in package.json
- Execute kubectl describe node and display output in plaintext editor
- Include proper error handling for kubectl failures

Implements story: 009-implement-describe-raw-command

--- a/package.json
+++ b/package.json
@@ -96,6 +96,11 @@
         "category": "Kube9"
       },
       {
+        "command": "kube9.describeNodeRaw",
+        "title": "Describe (Raw)",
+        "category": "Kube9"
+      },
+      {
         "command": "kube9.viewResourceYAML",
         "title": "View YAML",
         "category": "Kube9"
@@ -444,6 +449,11 @@
         {
           "command": "kube9.viewResourceYAML",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
+          "group": "kube9@2"
+        },
+        {
+          "command": "kube9.describeNodeRaw",
+          "when": "view == kube9ClusterView && viewItem == resource:Node",
           "group": "kube9@2"
         },
         {
