feat: create React PodDescribeApp component for pod describe webview

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -11,7 +11,8 @@
   },
   "include": [
     "./argocd-application/**/*",
-    "./event-viewer/**/*"
+    "./event-viewer/**/*",
+    "./pod-describe/**/*"
   ]
 }
 
