--- a/package.json
+++ b/package.json
@@ -272,6 +272,19 @@
         "command": "kube9.restartPortForward",
         "title": "Restart Forward",
         "category": "kube9"
+      },
+      {
+        "command": "kube9.retryFailedOperation",
+        "title": "Retry",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "kube9.viewErrorDetails",
+        "title": "View Error Details"
+      },
+      {
+        "command": "kube9.copyErrorDetails",
+        "title": "Copy Error Details"
       }
     ],
     "menus": {
@@ -535,6 +548,21 @@
           "command": "kube9.restartPortForward",
           "when": "view == kube9ClusterView && viewItem == portForward",
           "group": "kube9@4"
+        },
+        {
+          "command": "kube9.retryFailedOperation",
+          "when": "view == kube9ClusterView && viewItem == error",
+          "group": "inline@1"
+        },
+        {
+          "command": "kube9.viewErrorDetails",
+          "when": "view == kube9ClusterView && viewItem == error",
+          "group": "error@1"
+        },
+        {
+          "command": "kube9.copyErrorDetails",
+          "when": "view == kube9ClusterView && viewItem == error",
+          "group": "error@2"
         }
       ],
       "editor/context": [
@@ -567,6 +595,26 @@
           ],
           "default": null,
           "markdownDescription": "Custom namespace for kube9-operator. Leave empty for auto-detection.\n\n**String example** (applies to all clusters):\n```json\n\"kube9.operatorNamespace\": \"my-kube9\"\n```\n\n**Object example** (per-cluster):\n```json\n\"kube9.operatorNamespace\": {\n  \"production\": \"kube9-prod\",\n  \"staging\": \"kube9-staging\"\n}\n```"
+        },
+        "kube9.timeout.connection": {
+          "type": "number",
+          "default": 10000,
+          "description": "Connection timeout in milliseconds"
+        },
+        "kube9.timeout.apiRequest": {
+          "type": "number",
+          "default": 30000,
+          "description": "API request timeout in milliseconds"
+        },
+        "kube9.errors.showDetails": {
+          "type": "boolean",
+          "default": false,
+          "description": "Show technical error details in notifications"
+        },
+        "kube9.errors.throttleWindow": {
+          "type": "number",
+          "default": 5000,
+          "description": "Error throttle window in milliseconds"
         }
       }
     }
