refactor: rename DataCollectionReportPanel to HealthReportPanel
- Rename DataCollectionReportPanel.ts to HealthReportPanel.ts
- Update class name and all internal references
- Change webview panel ID to 'kube9.operatorHealthReport'
- Update panel title to 'Kube9 Operator Health'
- Update HTML content to show operator health placeholder
- Register 'kube9.openOperatorHealthReport' command in extension.ts
- Remove old DataCollectionReportPanel references

Part of replacing compliance section with operator health reporting.

--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
         "category": "Kube9"
       },
       {
-        "command": "kube9.openDataCollectionReport",
-        "title": "Open Data Collection Report",
+        "command": "kube9.openOperatorHealthReport",
+        "title": "Open Operator Health Report",
         "category": "Kube9"
       },
       {
@@ -296,7 +296,7 @@
           "command": "kube9.openClusterManager"
         },
         {
-          "command": "kube9.openDataCollectionReport"
+          "command": "kube9.openOperatorHealthReport"
         },
         {
           "command": "kube9.applyYAML"
