--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "src/webview/argocd-application",
     "src/webview/event-viewer",
     "src/webview/pod-logs",
-    "src/webview/pod-describe"
+    "src/webview/pod-describe",
+    "src/webview/operator-health-report"
   ]
 }
-
