--- a/package.json
+++ b/package.json
@@ -634,6 +634,29 @@
               "altText": "Kube9 activity bar icon and cluster tree view"
             },
             "completionEvents": ["onView:kube9ClusterView"]
+          },
+          {
+            "id": "kube9.step2.exploreClusterManager",
+            "title": "Explore Cluster Manager",
+            "description": "Learn how to customize your tree view organization with the Cluster Manager. Create custom views, organize namespaces, and tailor the interface to your workflow.\n\n[Open Cluster Manager](command:kube9.openClusterManager)",
+            "media": {
+              "image": "media/walkthrough/02-cluster-manager.png",
+              "altText": "Cluster Manager UI showing customization options"
+            },
+            "completionEvents": ["onCommand:kube9.openClusterManager"]
+          },
+          {
+            "id": "kube9.step3.navigateResources",
+            "title": "Navigate Resources",
+            "description": "Learn how to expand clusters and namespaces to explore Kubernetes resources organized in a hierarchical tree.\n\n**With clusters:** Try expanding a namespace in the kube9 view to see its resources.\n\n**Without clusters yet?** The image shows what you'll see when you connect a cluster. [Mark Complete](command:kube9.internal.completeStep3)",
+            "media": {
+              "image": "media/walkthrough/03-navigation.png",
+              "altText": "Expanded namespace showing resource hierarchy"
+            },
+            "completionEvents": [
+              "kube9.onNamespaceExpanded",
+              "onCommand:kube9.internal.completeStep3"
+            ]
           }
         ]
       }
