feat: add walkthrough steps 4-5 for resource viewing and pod logs
Add Step 4 (View Resources) and Step 5 (View Pod Logs) to the getting started walkthrough. Step 4 introduces pod click tracking with dual completion paths, while Step 5 demonstrates accessing pod logs using the existing viewPodLogs command.

- Step 4: View Resources with pod click event and fallback command
- Step 5: View Pod Logs with command button
- Both steps include media references and proper completion events

Related to story 003-add-walkthrough-steps4-5

--- a/package.json
+++ b/package.json
@@ -657,6 +657,29 @@
               "kube9.onNamespaceExpanded",
               "onCommand:kube9.internal.completeStep3"
             ]
+          },
+          {
+            "id": "kube9.step4.viewResources",
+            "title": "View Resources",
+            "description": "View detailed information about any resource by clicking on it. See current status, conditions, events, and more in the describe webview.\n\n**With resources:** Click any pod in the tree view to see its details.\n\n**Without resources yet?** The image shows what you'll see. [Mark Complete](command:kube9.internal.completeStep4)",
+            "media": {
+              "image": "media/walkthrough/04-view-resource.png",
+              "altText": "Resource describe webview showing pod status and details"
+            },
+            "completionEvents": [
+              "kube9.onPodClicked",
+              "onCommand:kube9.internal.completeStep4"
+            ]
+          },
+          {
+            "id": "kube9.step5.viewLogs",
+            "title": "View Pod Logs",
+            "description": "Access pod logs directly from the tree view for debugging and monitoring. Logs open in a dedicated viewer with filtering and search.\n\n[View Pod Logs](command:kube9.viewPodLogs)",
+            "media": {
+              "image": "media/walkthrough/05-logs.png",
+              "altText": "Pod logs viewer interface"
+            },
+            "completionEvents": ["onCommand:kube9.viewPodLogs"]
           }
         ]
       }
