feat: register help commands in package.json
Add three help commands (openDocumentation, reportIssue, viewKeyboardShortcuts)
to package.json contributes.commands array so they appear in the command palette
with proper titles and categories.

- kube9.openDocumentation: Opens documentation website
- kube9.reportIssue: Opens GitHub issues with pre-filled template
- kube9.viewKeyboardShortcuts: Opens VS Code keyboard shortcuts editor

All commands use "Kube9:" prefix in title and "Kube9" category for consistency.

--- a/package.json
+++ b/package.json
@@ -290,6 +290,21 @@
         "command": "kube9.showTutorial",
         "title": "Show Getting Started Tutorial",
         "category": "Kube9"
+      },
+      {
+        "command": "kube9.openDocumentation",
+        "title": "Kube9: Open Documentation",
+        "category": "Kube9"
+      },
+      {
+        "command": "kube9.reportIssue",
+        "title": "Kube9: Report Issue",
+        "category": "Kube9"
+      },
+      {
+        "command": "kube9.viewKeyboardShortcuts",
+        "title": "Kube9: View Keyboard Shortcuts",
+        "category": "Kube9"
       }
     ],
     "menus": {
