Add kube9.showHelpMenu command that displays a quick pick menu with help options (Documentation, Report Issue, Keyboard Shortcuts, Getting Started) when the status bar help icon is clicked.
- Add registerHelpMenuCommand function to HelpController
- Register command in extension activation
- Add command to package.json contributions
- Follow existing quick pick patterns from applyYAML and ResourceQuickPick

--- a/package.json
+++ b/package.json
@@ -305,6 +305,11 @@
         "command": "kube9.viewKeyboardShortcuts",
         "title": "Kube9: View Keyboard Shortcuts",
         "category": "Kube9"
+      },
+      {
+        "command": "kube9.showHelpMenu",
+        "title": "Kube9: Show Help Menu",
+        "category": "Kube9"
       }
     ],
     "menus": {
