feat: add context menu help items for pods, deployments, and services
Add menu contributions to package.json so help commands appear in tree
view context menus. Help items appear at the bottom of context menus
in a separate "Help" group.

- Add menu contributions for kube9.helpForPods
- Add menu contributions for kube9.helpForDeployments
- Add menu contributions for kube9.helpForServices
- Use z_help@1 group to place items at bottom of menu
- Filter by viewItem using regex patterns matching resource types

Closes story 011-register-context-menu-contributions

--- a/package.json
+++ b/package.json
@@ -606,6 +606,21 @@
           "command": "kube9.copyErrorDetails",
           "when": "view == kube9ClusterView && viewItem == error",
           "group": "error@2"
+        },
+        {
+          "command": "kube9.helpForPods",
+          "when": "view == kube9ClusterView && viewItem =~ /pod/",
+          "group": "z_help@1"
+        },
+        {
+          "command": "kube9.helpForDeployments",
+          "when": "view == kube9ClusterView && viewItem =~ /deployment/",
+          "group": "z_help@1"
+        },
+        {
+          "command": "kube9.helpForServices",
+          "when": "view == kube9ClusterView && viewItem =~ /service/",
+          "group": "z_help@1"
         }
       ],
       "editor/context": [
