feat: add Helm Package Manager tree item
Add a single "Helm Package Manager" tree item to the Kube9 sidebar
at the root level, positioned after clusters/folders. Register the
command kube9.helm.openPackageManager with a placeholder handler
until webview infrastructure is ready.

- Add helmPackageManager to TreeItemType union
- Modify ClusterTreeProvider.getClusters() to include Helm item
- Register command in package.json
- Add placeholder command handler in extension.ts

Part of helm-package-manager session, story 002.

--- a/package.json
+++ b/package.json
@@ -269,6 +269,11 @@
         "category": "kube9"
       },
       {
+        "command": "kube9.helm.openPackageManager",
+        "title": "Open Helm Package Manager",
+        "category": "Kube9"
+      },
+      {
         "command": "kube9.restartPortForward",
         "title": "Restart Forward",
         "category": "kube9"
