--- a/package.json
+++ b/package.json
@@ -785,7 +785,8 @@
     "prepackage": "npm run build",
     "package": "vsce package",
     "release": "semantic-release",
-    "release:dry-run": "semantic-release --dry-run"
+    "release:dry-run": "semantic-release --dry-run",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
@@ -812,6 +813,7 @@
     "css-loader": "^6.8.1",
     "esbuild": "^0.24.0",
     "eslint": "^8.45.0",
+    "husky": "^9.1.7",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
