--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,11 +18,11 @@
       "type": "extensionHost",
       "request": "launch",
       "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}",
-        "--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
+        "--extensionDevelopmentPath=${workspaceFolder:kube9-vscode}",
+        "--extensionTestsPath=${workspaceFolder:kube9-vscode}/out/test/suite/index"
       ],
       "outFiles": [
-        "${workspaceFolder}/out/test/**/*.js"
+        "${workspaceFolder:kube9-vscode}/out/test/**/*.js"
       ],
       "preLaunchTask": "${defaultBuildTask}"
     }
