fix: explicitly set owner parameter in GitHub App token step
Set owner to 'alto9' explicitly and use repository name without owner prefix in repositories list.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,9 @@ jobs:
         with:
           app-id: ${{ secrets.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          owner: alto9
           repositories: |
-            alto9/kube9-vscode
+            kube9-vscode
       
       - name: Use Node.js 22.x
         uses: actions/setup-node@v4
