--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,21 @@
       "preLaunchTask": "${defaultBuildTask}"
     },
     {
+      "name": "Extension (Demo Cluster)",
+      "type": "extensionHost",
+      "request": "launch",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}"
+      ],
+      "env": {
+        "KUBECONFIG": "${workspaceFolder}/demo-cluster/kubeconfig"
+      },
+      "outFiles": [
+        "${workspaceFolder}/out/**/*.js"
+      ],
+      "preLaunchTask": "npm: watch"
+    },
+    {
       "name": "Extension Tests",
       "type": "extensionHost",
       "request": "launch",
