feat: add kubectl context switching from VS Code
- Add switchContext function to kubectlContext.ts
- Create context switching command with quick pick
- Add status bar item showing current context (clickable to switch)
- Add right-click menu option 'Set as Active Context' for clusters
- Modify ClusterTreeProvider to only allow expanding active cluster
- Close webviews when switching contexts
- Update tree view and status bar after context switch
- Context persists across VS Code reloads

Fixes #8

--- a/package.json
+++ b/package.json
@@ -330,12 +330,21 @@
         "command": "kube9.helpForServices",
         "title": "Help: Working with Services",
         "category": "Kube9"
+      },
+      {
+        "command": "kube9.switchContext",
+        "title": "Switch Context",
+        "category": "Kube9",
+        "icon": "$(arrow-swap)"
       }
     ],
     "menus": {
       "commandPalette": [
         {
           "command": "kube9.refreshClusters"
+        },
+        {
+          "command": "kube9.switchContext"
         },
         {
           "command": "kube9.openClusterManager"
@@ -487,6 +496,11 @@
         }
       ],
       "view/item/context": [
+        {
+          "command": "kube9.switchContext",
+          "when": "view == kube9ClusterView && viewItem == cluster",
+          "group": "cluster@1"
+        },
         {
           "command": "kube9.setActiveNamespace",
           "when": "view == kube9ClusterView && viewItem == namespace:inactive",
