fix: improve context switching UX and namespace integration
- Only show 'Switch Context' menu option for inactive clusters
- Add triggerCheck method to namespace watcher for immediate updates
- Ensure namespace status bar updates immediately on context switch
- Update contextValue for clusters when restoring cached status
- Add kubectl-context-switching feature documentation
- Update context-aware-namespace-management feature with integration scenario

--- a/package.json
+++ b/package.json
@@ -498,7 +498,7 @@
       "view/item/context": [
         {
           "command": "kube9.switchContext",
-          "when": "view == kube9ClusterView && viewItem == cluster",
+          "when": "view == kube9ClusterView && viewItem == cluster:inactive",
           "group": "cluster@1"
         },
         {
