fix: enable ESM imports in tests and align pre-push hook with GitHub Actions
- Add --experimental-require-module flag to test commands to fix ESM import errors
- Update pre-push hook to run lint, build, and test:unit (matching CI workflow)
- Add NODE_OPTIONS to GitHub Actions workflow for consistency
- Ensures pre-push hook prevents pushes that would fail in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
         continue-on-error: false
+        env:
+          NODE_OPTIONS: --experimental-require-module
 
   build:
     name: Build Extension
