--- a/package.json
+++ b/package.json
@@ -795,9 +795,9 @@
     "compile": "tsc && npm run build:webview",
     "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify && esbuild src/webview/event-viewer/index.tsx --bundle --outfile=media/event-viewer/index.js --format=iife --platform=browser --minify && esbuild src/webview/pod-logs/index.tsx --bundle --outfile=media/pod-logs/main.js --format=iife --platform=browser --minify && esbuild src/webview/operator-health-report/index.tsx --bundle --outfile=media/operator-health-report/main.js --format=iife --platform=browser --minify && esbuild src/webview/helm-package-manager/index.tsx --bundle --outfile=media/helm-package-manager/main.js --format=iife --platform=browser --minify && cp src/webview/pod-logs/styles.css media/pod-logs/styles.css && cp src/webview/operator-health-report/styles.css media/operator-health-report/styles.css",
     "pretest": "npm run compile && npm run lint",
-    "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
+    "test": "node --experimental-require-module node_modules/.bin/mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
     "pretest:unit": "npm run compile && npm run lint",
-    "test:unit": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js' --grep '@requires-k8s' --invert",
+    "test:unit": "node --experimental-require-module node_modules/.bin/mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js' --grep '@requires-k8s' --invert",
     "test:integration": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/tests/**/*.test.js'",
     "test:all": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/{src/test,tests}/**/*.test.js'",
     "lint": "eslint src --ext ts",
