--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "src/webview/pod-logs",
     "src/webview/pod-describe",
     "src/webview/operator-health-report",
-    "src/webview/helm-package-manager"
+    "src/webview/helm-package-manager",
+    "src/webview/components"
   ]
 }
