fix: add PATH environment variable to launch configurations
Update all launch configurations to include /opt/homebrew/bin in PATH.
This ensures kubectl and helm commands are accessible in the Extension
Development Host on macOS systems where Homebrew is installed.

Fixes issue where kubectl and helm were not found when running the
extension in development mode.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,9 @@
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder:kube9-vscode}"
       ],
+      "env": {
+        "PATH": "/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${env:PATH}"
+      },
       "outFiles": [
         "${workspaceFolder:kube9-vscode}/dist/**/*.js"
       ],
