Implement Describe Webview for Persistent Volume Claims
- Create PVCDescribeProvider to fetch and format PVC data
- Add PVC support to DescribeWebview with showPVCDescribe method
- Create React components for PVC describe webview (Overview, VolumeDetails, Usage, Conditions, Events, Metadata tabs)
- Add webpack configuration for PVC describe webview bundle
- Add CSS styles for PVC-specific components
- Create Forge-compliant feature and spec documentation
- Fix VS Code API acquisition issue in UsageTab
- Fix listNamespacedEvent API call to use object-based parameters

Resolves #56

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "src/webview/event-viewer",
     "src/webview/pod-logs",
     "src/webview/pod-describe",
+    "src/webview/pvc-describe",
     "src/webview/operator-health-report",
     "src/webview/helm-package-manager",
     "src/webview/components"
