Implement Describe Webview for Persistent Volumes
- Add PVDescribeProvider to fetch and format PV data from Kubernetes API
- Add PV routing and methods to DescribeWebview.ts
- Create React components for PV describe webview (Overview, Source Details, Binding, Events, Metadata tabs)
- Add webpack configuration for pv-describe bundle
- Update TypeScript configuration to include pv-describe directory
- Add Forge documentation for persistent-volume-describe feature
- Support navigation to bound PVC from PV describe webview
- Support View YAML functionality for PVs

Fixes #55

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -12,7 +12,9 @@
   "include": [
     "./argocd-application/**/*",
     "./event-viewer/**/*",
-    "./pod-describe/**/*"
+    "./pod-describe/**/*",
+    "./pvc-describe/**/*",
+    "./pv-describe/**/*"
   ]
 }
 
