feat: add describe webview for Kubernetes secrets
Implements graphical kubectl describe functionality for secrets with
overview, keys, usage, events, and metadata tabs.

Fixes #51

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -14,7 +14,8 @@
     "./event-viewer/**/*",
     "./pod-describe/**/*",
     "./pvc-describe/**/*",
-    "./pv-describe/**/*"
+    "./pv-describe/**/*",
+    "./secret-describe/**/*"
   ]
 }
 
