--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "src/webview/pod-describe",
     "src/webview/pvc-describe",
     "src/webview/pv-describe",
+    "src/webview/secret-describe",
     "src/webview/operator-health-report",
     "src/webview/helm-package-manager",
     "src/webview/components"
