feat: implement describe webview for ConfigMaps
- Add ConfigMapDescribeProvider to fetch and format ConfigMap data
- Implement React components for ConfigMap describe view
- Add click handler in ConfigMapsSubcategory to open describe webview
- Configure webpack for configmap-describe bundle
- Display ConfigMap data, usage, and metadata in formatted view
- Support viewing YAML and refreshing ConfigMap details

Fixes #52

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -16,7 +16,8 @@
     "./pvc-describe/**/*",
     "./pv-describe/**/*",
     "./secret-describe/**/*",
-    "./service-describe/**/*"
+    "./service-describe/**/*",
+    "./configmap-describe/**/*"
   ]
 }
 
