--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "src/webview/pv-describe",
     "src/webview/secret-describe",
     "src/webview/service-describe",
+    "src/webview/configmap-describe",
     "src/webview/operator-health-report",
     "src/webview/helm-package-manager",
     "src/webview/components"
