feat: implement describe webview for services
- Add ServiceDescribeProvider to fetch and format service data
- Create React webview components for service describe view
- Add Service support to DescribeWebview routing
- Wire up tree view click handler for services
- Display service type, IPs, ports, endpoints, and events
- Update webpack build configuration

Fixes #53

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -15,7 +15,8 @@
     "./pod-describe/**/*",
     "./pvc-describe/**/*",
     "./pv-describe/**/*",
-    "./secret-describe/**/*"
+    "./secret-describe/**/*",
+    "./service-describe/**/*"
   ]
 }
 
