--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
     "src/webview/pvc-describe",
     "src/webview/pv-describe",
     "src/webview/secret-describe",
+    "src/webview/service-describe",
     "src/webview/operator-health-report",
     "src/webview/helm-package-manager",
     "src/webview/components"
